tests/parser/function-declaration-block-error.stderr
error: expected '{'
 --> $DIR/function-declaration-block-error.lox:1:9
  |
1 | fn f(x) _
  |         ^
